pamc/src/tests/integration/should_succeed/single_file/mod.rs
use super::*;

mod no_warnings;

mod check_warnings;
mod todo_warnings;
